--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,61 +1,28 @@
 pipeline {
-    parameters {
-        booleanParam(name: 'autoApprove', defaultValue: false, description: 'Automatically run apply after generating plan?')
-    }
-    
-    environment {
-        AWS_ACCESS_KEY_ID     = credentials('AWS_ACCESS_KEY_ID')
-        AWS_SECRET_ACCESS_KEY = credentials('AWS_SECRET_ACCESS_KEY')
-    }
-
     agent any
-
     stages {
         stage('Checkout') {
             steps {
                 script {
-                    dir("terraform") {
-                        git "https://github.com/UparagNath/devops.git"
+                    dir('terraform') {
+                        git branch: 'main', url: 'https://github.com/UparagNath/devops.git'
                     }
                 }
             }
         }
-
         stage('Plan') {
             steps {
-                script {
-                    dir('terraform') {
-                        sh 'terraform init'
-                        sh 'terraform plan -out tfplan'
-                        sh 'terraform show -no-color tfplan > tfplan.txt'
-                    }
-                }
+                echo 'Plan stage'
             }
         }
-
         stage('Approval') {
-            when {
-                not {
-                    equals expected: true, actual: params.autoApprove
-                }
-            }
-
             steps {
-                script {
-                    def plan = readFile 'terraform/tfplan.txt'
-                    input message: "Do you want to apply the plan?",
-                    parameters: [text(name: 'Plan', description: 'Please review the plan', defaultValue: plan)]
-                }
+                echo 'Approval stage'
             }
         }
-
         stage('Apply') {
             steps {
-                script {
-                    dir('terraform') {
-                        sh 'terraform apply -input=false tfplan'
-                    }
-                }
+                echo 'Apply stage'
             }
         }
     }
