--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,60 +1,53 @@
 pipeline {
+    agent any
+
     parameters {
         booleanParam(name: 'autoApprove', defaultValue: false, description: 'Automatically run apply after generating plan?')
-    } 
-    environment {
-        AWS_ACCESS_KEY_ID     = credentials('AWS_ACCESS_KEY_ID')
-        AWS_SECRET_ACCESS_KEY = credentials('AWS_SECRET_ACCESS_KEY')
+        choice(name: 'action', choices: ['apply', 'destroy'], description: 'Select the action to perform')
     }
 
-    agent any
+    environment {
+        AWS_ACCESS_KEY_ID     = credentials('aws-access-key-id')
+        AWS_SECRET_ACCESS_KEY = credentials('aws-secret-access-key')
+        AWS_DEFAULT_REGION    = 'eu-north-1'
+    }
 
     stages {
         stage('Checkout') {
             steps {
-                script {
-                    dir("terraform") {
-                        git branch: 'main', url: 'https://github.com/UparagNath/devops.git'
-                    }
-                }
+                git branch: 'main', url: 'https://github.com/CodeSagarOfficial/jenkins-scripts.git'
             }
         }
-
+        stage('Terraform init') {
+            steps {
+                sh 'terraform init'
+            }
+        }
         stage('Plan') {
             steps {
+                sh 'terraform plan -out tfplan'
+                sh 'terraform show -no-color tfplan > tfplan.txt'
+            }
+        }
+        stage('Apply / Destroy') {
+            steps {
                 script {
-                    dir('terraform') {
-                        sh 'terraform init'
-                        sh 'terraform plan -out tfplan'
-                        sh 'terraform show -no-color tfplan > tfplan.txt'
+                    if (params.action == 'apply') {
+                        if (!params.autoApprove) {
+                            def plan = readFile 'tfplan.txt'
+                            input message: "Do you want to apply the plan?",
+                            parameters: [text(name: 'Plan', description: 'Please review the plan', defaultValue: plan)]
+                        }
+
+                        sh 'terraform ${action} -input=false tfplan'
+                    } else if (params.action == 'destroy') {
+                        sh 'terraform ${action} --auto-approve'
+                    } else {
+                        error "Invalid action selected. Please choose either 'apply' or 'destroy'."
                     }
                 }
             }
         }
 
-        stage('Approval') {
-            when {
-                not {
-                    equals expected: true, actual: params.autoApprove
-                }
-            }
-            steps {
-                script {
-                    def plan = readFile 'terraform/tfplan.txt'
-                    input message: "Do you want to apply the plan?",
-                          parameters: [text(name: 'Plan', description: 'Please review the plan', defaultValue: plan)]
-                }
-            }
-        }
-
-        stage('Apply') {
-            steps {
-                script {
-                    dir('terraform') {
-                        sh 'terraform apply -input=false tfplan'
-                    }
-                }
-            }
-        }
     }
 }
